@@ -4,12 +4,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html" />
 <link rel="stylesheet" href="main.css" type="text/css" />
-<link rel="icon" type="image/gif" href="bug.gif" />
+<link rel="icon" type="image/png" href="randoop-logo.png" />
 <title>Randoop Developer's Manual</title>
 </head>
 <body>
 
-<img src="bug.gif" alt="Bug" style="float:right" />
+<img src="randoop-logo.png" alt="Randoop logo" style="float:right" />
 
 <h1>Randoop Developer's Manual</h1> <!-- omit from toc -->
 
@@ -159,9 +159,10 @@ Then, run under Randoop's home directory:
   <li>Commit those changes.</li>
   <li>Tag the repository tip with the version number; for example,
       <code>git tag -a v1.3.2 -m "Randoop version 1.3.2"</code></li>
+  <li><code>git push --tags</a></li>
   <li>Create the distribution: <tt>make distribution-files</tt></li>
   <li>Rename the zip and jar files created under the <code>dist/</code> directory to the appropriate version number.</li>
-  <li>Follow the <a href="https://help.github.com/articles/creating-releases/">GitHub instructions for creating a release</a>; in particular, upload the zip and jar files</li>
+  <li>Follow the <a href="https://help.github.com/articles/creating-releases/">GitHub instructions for creating a release</a>; in particular, start at <a href="https://github.com/mernst/randoop/releases">https://github.com/mernst/randoop/releases</a>, and upload the zip and jar files</li>
 </ol>
 
 
